<resources>
    <string name="app_name">ElectricCarApp</string>
    <string name="app_title">Electric Car</string>
    <string name="cars">Cars</string>
    <string name="favorites">Favorites</string>
    <string name="electric_car_description">An Electric Car Image</string>
    <string name="car_price">Price</string>
    <string name="car_price_value">R$ 100.000,00</string>
    <string name="car_battery">Battery</string>
    <string name="car_battery_value">93,4 kWh</string>
    <string name="car_power">Power</string>
    <string name="car_power_value">646 HP</string>
    <string name="car_charge">Charge</string>
    <string name="car_charge_value">23 min</string>
    <string name="charge_price">Price</string>
    <string name="kms_price">Kms driven</string>
    <string name="calculate">calculate</string>
    <string name="calculator">Calculator</string>
    <string name="tv_calculate_autonomy">Calculate Car Autonomy</string>
    <string name="no_wifi">No wifi network available!</string>
    <string name="no_wifi_description">No wifi available image.</string>
    <string name="response_error">Oops! Something\'s wrong. Try again later.</string>
    <string name="saved_calculus">saved_calculus</string>
    <string name="favorite_star">Favorite Star</string>
    <string-array name="array_cities">
        <item>Campos</item>
        <item>Grussai</item>
        <item>Farol</item>
        <item>Atafona</item>
    </string-array>
</resources>