<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tab_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/cars"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_title" />

    <TextView
        android:id="@+id/tv_tab_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/favorites"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_tab_cars"
        app:layout_constraintTop_toTopOf="@id/tv_tab_cars" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/electric_car_description"
        android:scaleType="centerCrop"
        android:scaleX="-1"
        android:src="@drawable/electric_car"
        app:layout_constraintLeft_toLeftOf="@id/tv_tab_cars"
        app:layout_constraintTop_toBottomOf="@id/tv_tab_cars" />

    <TextView
        android:id="@+id/tv_car_price"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/car_price"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_image" />

    <TextView
        android:id="@+id/tv_car_price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/car_price_value"
        app:layout_constraintStart_toEndOf="@id/tv_car_price"
        app:layout_constraintTop_toBottomOf="@id/iv_image" />

    <TextView
        android:id="@+id/tv_car_battery"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/car_battery"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_car_price" />

    <TextView
        android:id="@+id/tv_car_battery_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/car_battery_value"
        app:layout_constraintStart_toEndOf="@id/tv_car_battery"
        app:layout_constraintTop_toTopOf="@id/tv_car_battery" />

    <TextView
        android:id="@+id/tv_car_power"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/car_power"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_car_battery" />

    <TextView
        android:id="@+id/tv_car_power_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/car_power_value"
        app:layout_constraintStart_toEndOf="@id/tv_car_power"
        app:layout_constraintTop_toTopOf="@id/tv_car_power" />

    <TextView
        android:id="@+id/tv_car_charge"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/car_charge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_car_power" />

    <TextView
        android:id="@+id/tv_car_charge_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/car_charge_value"
        app:layout_constraintStart_toEndOf="@id/tv_car_charge"
        app:layout_constraintTop_toTopOf="@id/tv_car_charge" />

    <EditText
        android:id="@+id/et_charge_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="Kwh Price"
        android:ems="10"
        android:hint="@string/charge_price"
        android:textColorHint="#BBB"
        android:inputType="numberDecimal"
        android:maxLength="100"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_car_charge" />

    <EditText
        android:id="@+id/et_kms_driven"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:autofillHints="Kwh Price"
        android:ems="10"
        android:hint="@string/kms_price"
        android:textColorHint="#BBB"
        android:inputType="numberDecimal"
        android:maxLength="100"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="@id/et_charge_price"
        app:layout_constraintStart_toStartOf="@id/et_charge_price"
        app:layout_constraintTop_toBottomOf="@+id/et_charge_price" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLength="100"
        android:maxLines="2"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="@+id/et_kms_driven"
        app:layout_constraintStart_toStartOf="@+id/et_kms_driven"
        app:layout_constraintTop_toBottomOf="@+id/et_kms_driven" />

    <TextView
        android:id="@+id/tv_autonomy_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_calculate"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate" />


</androidx.constraintlayout.widget.ConstraintLayout>