<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_star_24"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/electric_car_description"
                android:scaleType="centerCrop"
                android:scaleX="-1"
                android:src="@drawable/electric_car"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_car_price"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/car_price"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_car_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/car_price_value"
                android:textColor="@color/cardview_dark_background"
                app:layout_constraintStart_toEndOf="@id/tv_car_price"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_car_battery"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/car_battery"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_car_price" />

            <TextView
                android:id="@+id/tv_car_battery_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/car_battery_value"
                android:textColor="@color/cardview_dark_background"
                app:layout_constraintStart_toEndOf="@id/tv_car_battery"
                app:layout_constraintTop_toTopOf="@id/tv_car_battery" />

            <TextView
                android:id="@+id/tv_car_power"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/car_power"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_car_battery" />

            <TextView
                android:id="@+id/tv_car_power_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/car_power_value"
                android:textColor="@color/cardview_dark_background"
                app:layout_constraintStart_toEndOf="@id/tv_car_power"
                app:layout_constraintTop_toTopOf="@id/tv_car_power" />

            <TextView
                android:id="@+id/tv_car_charge"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/car_charge"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_car_power" />

            <TextView
                android:id="@+id/tv_car_charge_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/car_charge_value"
                android:textColor="@color/cardview_dark_background"
                app:layout_constraintStart_toEndOf="@id/tv_car_charge"
                app:layout_constraintTop_toBottomOf="@id/cl_card_content"
                app:layout_constraintTop_toTopOf="@id/tv_car_charge" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>