<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_charge_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="Kwh Price"
        android:ems="10"
        android:hint="@string/charge_price"
        android:inputType="numberDecimal"
        android:maxLength="100"
        android:maxLines="2"
        android:textColorHint="#BBB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_kms_driven"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:autofillHints="Kwh Price"
        android:ems="10"
        android:hint="@string/kms_price"
        android:textColorHint="#BBB"
        android:inputType="numberDecimal"
        android:maxLength="100"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="@id/et_charge_price"
        app:layout_constraintStart_toStartOf="@id/et_charge_price"
        app:layout_constraintTop_toBottomOf="@+id/et_charge_price" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLength="100"
        android:maxLines="2"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="@+id/et_kms_driven"
        app:layout_constraintStart_toStartOf="@+id/et_kms_driven"
        app:layout_constraintTop_toBottomOf="@+id/et_kms_driven" />

    <TextView
        android:id="@+id/tv_autonomy_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_calculate"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate" />


</androidx.constraintlayout.widget.ConstraintLayout>